--- a/designs/UI/search.html
+++ b/designs/UI/search.html
@@ -11,11 +11,11 @@
 </head>
 <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="signupform.html"></a></li>
+    <li><a href="signupform.html">Sign Up</a></li>
     <li><a href="business_registration_form.html">Register Business</a></li>
     <li><a href="update_your_business.html">Update Your Business</a></li>
-    <li><a href="business_catalog.html"></a></li>
-    <li><a class="active" href="search.html"></a></li>
+    <li><a href="business_catalog.html">Listed Business</a></li>
+    <li><a class="active" href="search.html">Search Page</a></li>
 </ul>
 
 <body>
