fixed issue with loginbox overflowing out page

--- a/designs/UI/business_registration_form.html
+++ b/designs/UI/business_registration_form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 <head>
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
 	<meta name="description" content="Business Listings">
 	<meta name="keywords" content="Weconnect">
 	<meta name="viewport" content="width=device-width, intial-scale=1.0">
@@ -18,20 +18,20 @@
 </ul>
 <body>
 	<div class="loginBox">
-		<img src="briefcase.png" class="user">
-	<form action="action_page.php">
-		<p>Company's Name</p>
-		<input type="text" name="name" placeholder="Bonoko Sounds">
-		<p>Where your Company is based</p>
-		<input type="number" name="location" placeholder="Nairobi">
-		<p>Contact Number</p>
-		<input type="number" name="contact " placeholder="+254 7* *** ***">
-		<p>Physical Address</p>
-		<input type="number" name="Address">
-		<p>Objectives for which the Company was Established</p>
-		<input type="text" name="objective_1" placeholder="Primary Objective">
-		<input type="text" name="objective_2" placeholder="Secondary Objective">
-		<p>Type of Company</p>
+		<!-- <img src="briefcase.png" class="user"> -->
+		<form action="action_page.php">
+			<p>Company's Name</p>
+			<input type="text" name="name" placeholder="Bonoko Sounds">
+			<p>Where your Company is based</p>
+			<input type="number" name="location" placeholder="Nairobi">
+			<p>Contact Number</p>
+			<input type="number" name="contact " placeholder="+254 7* *** ***">
+			<p>Physical Address</p>
+			<input type="number" name="Address">
+			<p>Main objectives of Company</p>
+			<input type="text" name="objective_1" placeholder="Primary Objective">
+			<input type="text" name="objective_2" placeholder="Secondary Objective">
+			<p>Type of Company</p>
 		<p>
 			<select name="type_of_company">
 				<option value="PLC">Public Limited Company</option>
