--- a/designs/UI/index.html
+++ b/designs/UI/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
-
 <head>
-	<meta charset="utf-8">
-	<meta name="description" content="Busines Listings">
-	<meta name="keywords" content="weconnect Busines">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>weconnect</title>
-	<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="description" content="Busines Listings">
+    <meta name="keywords" content="HTML, CSS">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>weconnect</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <ul>
-	<li><a class="active" href="index.html">Home</a></li>
-	<li><a href="signupform.html"></a>Sign Up</li>
-	<li><a href="business_registration_form.html">Register Business</a></li>
-	<li><a href="update_your_business.html">Update Your Business</a></li>
-	<li><a href="search.html">Search Page</a></li>
+    <li><a class="active" href="index.html">Home</a></li>
+    <li><a href="signupform.html">Sign Up</a></li>
+    <li><a href="business_registration_form.html">Register Business</a></li>
+    <li><a href="update_your_business.html">Update Your Business</a></li>
+    <li><a href="business_catalog.html">Listed Business</a></li>
+    <li><a href="search.html">Search Page</a></li>
 </ul>
+
 <body>
-	<div class="loginBox">
-		<img src="avatar.png" class="user">
-		<h2> WeConnect</h2>
-
-		<form>
-			<p>Your Email or Username</p>
-			<input type="text" placeholder="Enter your Email/Username">
-			<p>Password</p>
-			<input type="password" placeholder="****************" >
-			<p><i>Not registered?</i></p>
-			<a href="signupform.html"> <b> Create an account</b></a>
-		</form>
-		
-	</div>
-
+    <div class="loginBox">
+       <!--  <img src="avatar.png" class="user"> -->
+        <h2> WeConnect</h2>
+        
+        <form>
+            <p>Your Email or Username</p>
+            <input type="text" name="" placeholder="Enter your Email/Username">
+            <p>Password</p>
+            <input type="password" name="" placeholder="****************">
+            <input type="submit" name="" value="Sign In">
+            <p><i>Not registered?</i></p>
+            <a href="signupform.html"> <b> Create an account</b></a>
+        </form>
+    </div>
 </body>
+
 </html>
