--- a/designs/UI/signupform.html
+++ b/designs/UI/signupform.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
 	<meta name="description" content="Business Listings">
-	<meta name="keywords" content="Business Listings">
+	<meta name="keywords" content="HTML, CSS">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sign Up</title>
 	<link rel="stylesheet"  href="style.css">
@@ -20,7 +20,7 @@
 
 <body>
 	<div class="loginBox">
-		<img src="avatar.png" class="user">
+		<!-- <img src="avatar.png" class="user"> -->
 		<form action="action_page.php">
 			<h2>Sign Up here</h2>
 			<p>Your name</p>
