--- a/designs/UI/update_your_business.html
+++ b/designs/UI/update_your_business.html
@@ -23,9 +23,9 @@
         <form action="action_page.php">
             <h2>Update your Details</h2>
             <p>Company's Name</p>
-            <input type="text" name="new_name" placeholder="You can this only once">
-            <p>Brief Description On Why you seek this changes</p>
-            <input type="text" name="reasons" placeholder="Start typing----">
+            <input type="text" name="new_name" placeholder="You can only update this once">
+            <p>Why do you seek updates?</p>
+            <input type="text" name="reasons" placeholder="">
             <p>Contact Number</p>
             <input type="number" name="new_number" placeholder="+254 7* *** ***">
             <p>Physical Adress</p>
