--- a/designs/UI/business_catalog.html
+++ b/designs/UI/business_catalog.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Business Listings">
     <meta name="keywords" content="business listings">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sytle.css">
+    <link rel="stylesheet" href="style.css">
     <title>Business catalog</title>
 </head>
 
